🧭 Què Desenvolupat el mestre UserContent
🧩 Finalitat
Separar del model User, les seves dades de contacte, permeten gestionar les dades en funció de les necessitats de cada sol·licitud.

🏗️ Metodologia
Dos models, dues entitats JPA, cadascuna amb els seus ports, comparteixen el UserService com a Service principal. A la creació d'un nou user, les dades (el primer email), és desa com a UserContent de tipus correu electrònic amb categoria Contacte general i com a principal a true. Les dues insercions a BD es fan usant transacció per garantir la integritat de les dades.

🧠 Millores aplicables
Endressar el codi picat a córrer-cuites i, tancar l'apartat de TESTS d'integració. (25/10/2025)

🗓️ Quan
Dijous 25/10/2025

✅ Estat
En progrés

👨‍💻 Qui
Salva Mata